src/components/data-table/styles.scss
@import '../../constants/scss/colors';
@import '../../constants/scss/sticker';

$horizontal-padding: 5.625rem;

.data-table {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-height: calc(100vh - 88px);
  overflow-y: auto;

  .header-row {
    align-items: center;
    color: $primary-text-color;
    display: flex;
    flex-direction: row;
    font-size: 1.2rem;
    font-weight: 500;
    justify-content: space-between;
    min-height: 3.25rem;

    &::before,
    &::after {
      content: '';
      min-width: $horizontal-padding;
    }

    .column {
      border-bottom: .5px solid $grey-color;
      height: 3.25rem;
      line-height: 3.25rem;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      width: 100%;
    }

    .column-status {
      width: 4%;
    }
  }

  .search-bar {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 20px 0 40px;

    .search-bar-content {
      align-items: center;
      border-bottom: 1px solid $grey-color;
      display: flex;
      flex-direction: row;
      min-width: 400px;
      position: relative;

      i {
        color: $secondary-text-color;
        font-size: 2rem;
        left: -50px;
        position: absolute;
      }

      input {
        border: 0;
        font-size: 2.2rem;
        font-weight: 500;
      }
    }
  }



  .rows-container {
    overflow-y: auto;

    .row {
      align-items: flex-start;
      color: $primary-text-color;
      cursor: pointer;
      display: flex;
      flex-direction: row;
      font-size: 1rem;
      justify-content: space-between;
      opacity: .7;
      position: relative;
      transition: all .3s ease;

      &::before,
      &::after {
        content: '';
        min-width: $horizontal-padding;
      }

      .border {
        background-color: $grey-color;
        bottom: 0;
        height: .5px;
        left: $horizontal-padding;
        position: absolute;
        right: $horizontal-padding;
      }

      .action {
        display: none;
      }

      .column {
        overflow: hidden;
        padding: 2.5rem 0;
        text-overflow: ellipsis;
        white-space: nowrap;
        width: 100%;
      }

      .column-status {
        width: 4%;
      }

      .link {
        align-items: center;
        background: none;
        border: 0;
        bottom: 0;
        color: $primary-text-color;
        cursor: pointer;
        display: flex;
        justify-content: center;
        opacity: 0;
        position: absolute;
        right: 0;
        text-align: center;
        top: 0;
        transition: all .3s ease;
        width: $horizontal-padding;
      }

      &:hover {
        opacity: 1;

        .link {
          display: flex;
          opacity: 1;
        }
      }

      &.selected {
        background-color: $secondary-white;
        min-height: 8rem;
        opacity: 1;

        .action {
          bottom: 0;
          display: flex;
          position: absolute;
          right: $horizontal-padding;
        }

        .link {
          display: flex;
          opacity: 0;
        }
      }
    }
  }

  .sweet-loading {
    text-align: center;
  }

  $shadow: rgba(0, 0, 0, .3);

  .data-table-create-btn-group {
    align-items: center;
    background-color: $secondary-white;
    box-shadow: 0 0 4px 0 $shadow;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    min-height: 5rem;
    width: 100vw;

    .data-table-create-btn {
      margin-right: $horizontal-padding;
    }
  }
}

